--- a/doc/simple_dialogue_flow_examples.ipynb
+++ b/doc/simple_dialogue_flow_examples.ipynb
@@ -55,20 +55,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "pycharm": {}
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package wordnet to /Users/Sarah/nltk_data...\n",
-      "[nltk_data]   Package wordnet is already up-to-date!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from emora_stdm import KnowledgeBase, DialogueFlow\n",
     "from enum import Enum\n",
@@ -109,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "pycharm": {}
    },
@@ -159,13 +150,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "pycharm": {}
    },
    "outputs": [],
    "source": [
-    "df.add_system_transition(State.START, State.PROMPT, 'Enter an animal\":\"')"
+    "df.add_system_transition(State.START, State.PROMPT, '\"Enter an animal\"')"
    ]
   },
   {
@@ -175,6 +166,15 @@
    },
    "source": [
     "<img src=\"res/startprompt.png\" />"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.run(debugging=False)"
    ]
   },
   {
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "pycharm": {}
    },
@@ -207,6 +207,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.run(debugging=False)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "pycharm": {}
@@ -217,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "pycharm": {}
    },
@@ -236,6 +245,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.run(debugging=False)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "pycharm": {}
@@ -246,13 +264,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "pycharm": {}
    },
    "outputs": [],
    "source": [
-    "df.add_system_transition(State.MAMMAL, State.PROMPT, '[! $animal is a mammal\",\" enter another animal\":\"]')"
+    "df.add_system_transition(State.MAMMAL, State.PROMPT, '[! $animal \" is a mammal, enter another animal\"]')"
    ]
   },
   {
@@ -262,6 +280,15 @@
    },
    "source": [
     "<img src=\"res/mammalprompt.png\" />"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.run(debugging=False)"
    ]
   },
   {
@@ -275,13 +302,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "pycharm": {}
    },
    "outputs": [],
    "source": [
-    "df.add_system_transition(State.BIRD, State.PROMPT, '[! $animal is a bird\",\" enter another animal\":\"]')"
+    "df.add_system_transition(State.BIRD, State.PROMPT, '[! $animal \"is a bird, enter another animal\"]')"
    ]
   },
   {
@@ -291,6 +318,15 @@
    },
    "source": [
     "<img src=\"res/birdprompt.png\" />"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.run(debugging=False)"
    ]
   },
   {
@@ -330,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "pycharm": {}
    },
@@ -349,6 +385,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.run(debugging=False)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "pycharm": {}
@@ -359,13 +404,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "pycharm": {}
    },
    "outputs": [],
    "source": [
-    "df.add_system_transition(State.ERR, State.PROMPT, '[! i dont know that one\",\" enter another animal\":\"]')"
+    "df.add_system_transition(State.ERR, State.PROMPT, '\"i dont know that one, enter another animal\"')"
    ]
   },
   {
@@ -383,7 +428,7 @@
     "pycharm": {}
    },
    "source": [
-    "## Step 5: Run the DialogueFlow and Talk"
+    "## Step 6: Run the DialogueFlow and Talk"
    ]
   },
   {
@@ -400,7 +445,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {}
+   },
+   "outputs": [],
+   "source": [
+    "df.run(debugging=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {}
+   },
+   "source": [
+    "## Put it all Together"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {
     "pycharm": {}
    },
@@ -409,21 +474,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "S: Enter an animal :\n",
+      "S: Enter an animal\n",
       "U: cat\n",
-      "S: cat is a mammal , enter another animal :\n",
-      "U: dog\n",
-      "S: dog is a mammal , enter another animal :\n",
+      "S: cat  is a mammal, enter another animal\n",
       "U: parrot\n",
-      "S: parrot is a bird , enter another animal :\n",
-      "U: dove\n",
-      "S: dove is a bird , enter another animal :\n",
-      "U: crow\n",
-      "S: crow is a bird , enter another animal :\n",
-      "U: dude\n",
-      "S: i dont know that one , enter another animal :\n",
-      "U: anything\n",
-      "S: i dont know that one , enter another animal :\n"
+      "S: parrot is a bird, enter another animal\n",
+      "U: kangaroo\n",
+      "S: i dont know that one, enter another animal\n"
      ]
     },
     {
@@ -443,7 +500,7 @@
       "\u001b[0;31mKeyboardInterrupt\u001b[0m: ",
       "\nDuring handling of the above exception, another exception occurred:\n",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-10-fc2298504e7a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdebugging\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-18-1238471c8102>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     47\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_error_successor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mState\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mPROMPT\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mState\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mERR\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     48\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 49\u001b[0;31m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdebugging\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;32m/anaconda2/envs/emora_cobot_env/lib/python3.7/site-packages/emora_stdm/state_transition_dialogue_manager/dialogue_flow.py\u001b[0m in \u001b[0;36mrun\u001b[0;34m(self, debugging)\u001b[0m\n\u001b[1;32m     57\u001b[0m                 \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"S:\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msystem_turn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdebugging\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdebugging\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     58\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 59\u001b[0;31m                 \u001b[0muser_input\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"U: \"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     60\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0muser_turn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0muser_input\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdebugging\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdebugging\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     61\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m/anaconda2/envs/emora_cobot_env/lib/python3.7/site-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36mraw_input\u001b[0;34m(self, prompt)\u001b[0m\n\u001b[1;32m    857\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parent_ident\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    858\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parent_header\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 859\u001b[0;31m             \u001b[0mpassword\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    860\u001b[0m         )\n\u001b[1;32m    861\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m/anaconda2/envs/emora_cobot_env/lib/python3.7/site-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36m_input_request\u001b[0;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[1;32m    887\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    888\u001b[0m                 \u001b[0;31m# re-raise KeyboardInterrupt, to truncate traceback\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 889\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    890\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    891\u001b[0m                 \u001b[0;32mbreak\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
@@ -451,26 +508,6 @@
      ]
     }
    ],
-   "source": [
-    "df.run(debugging=False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {}
-   },
-   "source": [
-    "## Put it all Together"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "pycharm": {}
-   },
-   "outputs": [],
    "source": [
     "from emora_stdm import KnowledgeBase, DialogueFlow\n",
     "from enum import Enum\n",
@@ -503,12 +540,12 @@
     "#    If add_system_transition: Natex defines what is produced \n",
     "#    If add_user_transition: Natex defines what the user utterance must be like\n",
     "#\n",
-    "df.add_system_transition(State.START, State.PROMPT, 'Enter an animal\":\"')\n",
+    "df.add_system_transition(State.START, State.PROMPT, '\"Enter an animal\"')\n",
     "df.add_user_transition(State.PROMPT, State.MAMMAL, \"$animal={cat,dog}\")\n",
     "df.add_user_transition(State.PROMPT, State.BIRD, \"$animal={parrot,dove,crow}\")\n",
-    "df.add_system_transition(State.MAMMAL, State.PROMPT, '[! $animal is a mammal\",\" enter another animal\":\"]')\n",
-    "df.add_system_transition(State.BIRD, State.PROMPT, '[! $animal is a bird\",\" enter another animal\":\"]')\n",
-    "df.add_system_transition(State.ERR, State.PROMPT, '[! i dont know that one\",\" enter another animal\":\"]')\n",
+    "df.add_system_transition(State.MAMMAL, State.PROMPT, '[! $animal \" is a mammal, enter another animal\"]')\n",
+    "df.add_system_transition(State.BIRD, State.PROMPT, '[! $animal \"is a bird, enter another animal\"]')\n",
+    "df.add_system_transition(State.ERR, State.PROMPT, '\"i dont know that one, enter another animal\"')\n",
     "\n",
     "\n",
     "# Set up how the state machine will behave if there are no transitions that match the user utterance\n",
@@ -519,7 +556,6 @@
     "# Every state that has user transitions from it must specify an error successor in this way!\n",
     "#\n",
     "df.set_error_successor(State.PROMPT, State.ERR)\n",
-    "\n",
     "\n",
     "df.run(debugging=False)"
    ]
